[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v-learn"
version = "1.0.0"
description = "A virtual learning platform with project management and resource sharing"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "streamlit==1.32.0",
    "supabase==2.3.4",
    "python-dotenv==1.0.1",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "plotly==5.19.0",
    "scikit-learn==1.4.1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "matplotlib==3.8.3",
    "pillow==10.2.0",
    "requests==2.31.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.1.2",
    "cryptography==42.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=v-learn"
